--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
         <p>She currently has no name! Please help me name her.
         </p>   
     </section>
+    <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
